--- a/public/css/post.css
+++ b/public/css/post.css
@@ -483,10 +483,7 @@ label img {
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
 
-    /*
-  scroll-snap-points-x: repeat(300px);
-  scroll-snap-type: mandatory;
-  */
+   
 }
 .slides::-webkit-scrollbar {
     width: 10px;
@@ -512,32 +509,10 @@ label img {
     transition: transform 0.5s;
     position: relative;
 
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+   
     
 }
 
- /* .slider:nth-child(2)>div{
-  background: #253faf !important;
-} */
-/* .slides > div:target { */
-    /*   transform: scale(0.8); */
-/* } */
-/* .author-info {
-    background: rgba(0, 0, 0, 0.75);
-    color: white;
-    padding: 0.75rem;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    margin: 0;
-} */
-/* .author-info a {
-    color: white;
-} */
 .slides img {
     object-fit: cover;
    
@@ -554,46 +529,41 @@ label img {
   
 }
 
-.slides .fa{
+.slides .fa, .listItem .fa{
   color: #4caf4f;
 }
 
-/* .slider > a {
-    display: inline-flex;
-    width: 1.5rem;
-    height: 1.5rem;
-    background: white;
-    text-decoration: none;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    margin: 0 0 0.5rem 0;
-    position: relative;
-} */
-/* .slider > a:active {
-    top: 1px;
-} */
-/* .slider > a:focus {
-    background: #000;
-} */
 
-/* Don't need button navigation */
-/* @supports (scroll-snap-type) {
-    .slider > a {
-        display: none;
-    }
-} */
 
 .second-sec{
  
   margin-top: 30px;
 }
 
-.slides .complogoName{
+.slides .complogoName, .listItem .itemlogoName {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
+ 
   
 }
 
 
+.listItem {
+ 
+  width: 100%;
+  height: 160px;
+  /* margin-right: 15px; */
+  border-radius: 20px;
+  background: #eff5be;
+  margin-bottom: 10px;
+
+}
+
+.itemlogoName img{
+  object-fit: cover;
+   
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+  border-radius: 10px;
+}
